fixed center alignment of cards

--- a/lucid-log-frontend/src/app/home/home.component.css
+++ b/lucid-log-frontend/src/app/home/home.component.css
@@ -87,8 +87,9 @@
 
 /* Style the content */
 .content {
-  margin-left: 200px;
+  /* margin-left: 200px; */
   padding-left: 20px;
+  box-shadow: 0px 4px 10px rgba(34, 34, 34, 0.2);
 }
 
 /* The actual timeline (the vertical ruler) */
